<resources>
    <string name="app_name">ShopDuo</string>
    <string name="se_ja_tem_conta_clique_aqui_para_efetuar_o_login">Se ja tem conta clique aqui para efetuar o login</string>
    <string name="confirmar">Confirmar</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="logo_do_app">Logo do app</string>
    <string name="cadastre_se">Ainda não tyem conta? Clique aqui e cadastre-se</string>
</resources>